--- a/Baha'i/Others/ROB/V1/p012-017Ch02.html
+++ b/Baha'i/Others/ROB/V1/p012-017Ch02.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p007-011Ch01.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p018-044Ch03.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -60,7 +60,7 @@
        <td VALIGN=top><small><center><a name="p13">13</a></center><p>
 	   * Násiri'd-Dín Sháh.<p>
 	   <hr>
-	   2. Shoghi Effendi, <i>God Passes By</i>, p. 118, for the words of Bahá'u'lláh.
+	   2. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para65">p. 118</a>, for the words of Bahá'u'lláh.
 	   </small></td>
 </tr>
 <tr>
@@ -91,7 +91,7 @@
 	   		  </center>
 	   </small>
        </td>
-
+	   
        <td valign="top">
 	   <H1 ALIGN=center><a name="facingp15"></a>
 	   	   <img src="i/15.jpg" width="300" height="425" border="0" align="middle" ALT="BAHÁ'ÍYYIH KHÁNUM">
@@ -102,7 +102,7 @@
 	   				  The Greatest Holy Leaf, daughter of Bahá'u'lláh<br>
 	   				  A photograph taken circa 1895<br>
 	   		  </center>
-	   </small>
+	   </small>	   
        </tr>
    </tr>
 </table>
@@ -146,7 +146,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p17">17</a></center><p>
 	   <hr>
-	   4. Shoghi Effendi, <i>God Passes By</i>, p. 185.
+	   4. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para206">p. 185</a>.
 	   </small></td>
 </tr>
 </table>
@@ -156,7 +156,7 @@
        <td>
 	   	   <FORM ACTION="p007-011Ch01.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -164,12 +164,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p018-044Ch03.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
