--- a/Baha'i/Others/ROB/V1/p018-044Ch03.html
+++ b/Baha'i/Others/ROB/V1/p018-044Ch03.html
@@ -105,7 +105,7 @@
        <td VALIGN=top><small><center><a name="p23">23</a></center><p>
 	   * The Mother Book of the Bábí Dispensation, revealed by the Báb.<p>
 	   <hr>
-	   2. Shoghi Effendi, <i>God Passes By</i>, p. 171.
+	   2. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para171">p. 171</a>.
 	   </small></td>
 </tr>
 <tr>
