--- a/Baha'i/Others/ROB/V1/p045-052Ch04.html
+++ b/Baha'i/Others/ROB/V1/p045-052Ch04.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p018-044Ch03.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p053-070Ch05.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -41,7 +41,11 @@
 	   It is in this ode that Bahá'u'lláh disclosed for the first time one of the unique features of His Revelation, namely, the advent of the 'Day of God' which, at this early stage in His ministry,
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="p45">45</a></center><p></small></td>
+       <td VALIGN=top><small><center><a name="p45">45</a></center><p>
+	   <hr>
+	   <hr>
+	   [The Poem of Rashh-i-'Amá] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para70">p. 121</a>
+	   </small></td>
 </tr>
 <tr>
        <td>
@@ -97,7 +101,7 @@
 	   In the <i>Kitáb-i-Aqdas</i> Bahá'u'lláh has written these assuring words:<p>
 	   <blockquote>Let nothing grieve thee, O Land of Tá (Tihrán), for God hath chosen thee to be the source of the joy of all mankind. He shall, if it be His Will, bless thy throne with one who will rule with justice, who will gather together the flock of God which the wolves have scattered. Such a ruler will, with joy and gladness, turn his face towards, and extend his favours unto, the people of Bahá. He indeed is accounted in the sight of God as a jewel among men. Upon him rest forever the glory of God, and the glory of all that dwell in the kingdom of His revelation.<p></blockquote>
 	   <blockquote>Rejoice with great joy, for God hath made thee 'the Dayspring of His light', inasmuch as within thee was born the Manifestation of His Glory. Be thou glad for this name that hath been conferred upon thee--a name through which the Day-star of grace hath shed its splendour, through which both earth and heaven have been illumined.<p></blockquote>
-	   <blockquote>Ere long will the state of affairs within thee be changed, and the reins of power fall into the hands of the people. Verily, thy Lord is the All-Knowing. His authority embraceth all things. Rest thou assured in the gracious favour of thy Lord. The eye of His loving-kindness shall everlastingly be directed towards thee. The day is approaching when thy agitation will have been transmuted into peace and quiet calm. Thus hath it been decreed in the wondrous Book.<small><sup>3</sup></small><p></blockquote>
+	   <blockquote>Ere long will the state of affairs within thee be changed, and the reins of power fall into the hands of the people. Verily, thy Lord is the All-Knowing. His authority embraceth all things. Rest thou assured in the gracious favour of thy Lord. The eye of His loving-kindness shall everlastingly be directed towards thee. The day is approaching when thy agitation will have been transmuted into peace and quiet calm. Thus hath it been decreed in the wondrous Book.<small><sup>3</sup></small><p></blockquote> 
 	   The significance of the verse, 'Be thou glad for this name that hath been conferred upon thee--a name through which the Day-star of grace hath shed its splendour, through which both earth and heaven have been illumined', is that, numerically, 'Tá' (the first letter of Tihrán) is equal to nine, which is the
 	   </td>
        <td></td>
@@ -106,7 +110,7 @@
 	   2. Bahá'u'lláh, <i>Gleanings from the Writings of Bahá'u'lláh</i>, sections <a href="../../../Baha/GL/p003-346.html#lxiii">lxiii</a>, <a href="../../../Baha/GL/p003-346.html#lxiv">lxiv</a>, and <a href="../../../Baha/GL/p003-346.html#lvi">lvi</a>, for the words quoted in this sentence.<p>
 	   3. <i>ibid</i>., section <a href="../../../Baha/GL/p003-346.html#lvi">lvi</a>.<p>
 	   <hr>
-	   <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para91">&para;91</a>-93
+	   <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para91">&para;91</a>-93 
 	   </small></td>
 </tr>
 <tr>
@@ -169,7 +173,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p52">52</a></center><p>
 	   <hr>
-	   7. Shoghi Effendi, <i>God Passes By</i>, p. 109.
+	   7. Shoghi Effendi, <i>God Passes By</i>,<a href="../../../SE/GPB/p087-234SecondPeriod.html#para46"> p. 109</a>.
 	   </small></td>
 </tr>
 </table>
@@ -179,7 +183,7 @@
        <td>
 	   	   <FORM ACTION="p018-044Ch03.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -187,12 +191,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p053-070Ch05.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
