--- a/Baha'i/Others/ROB/V1/p053-070Ch05.html
+++ b/Baha'i/Others/ROB/V1/p053-070Ch05.html
@@ -67,6 +67,8 @@
        <td VALIGN=top><small><center><a name="p55">55</a></center><p>
 	   <hr>
 	   1. Bahá'u'lláh, <i>Kitáb-i-Íqán</i>, p. 160 (Brit.), <a href="../../../Baha/KI/p095-258.html#para177">p. 251</a> (U.S.).
+	   <hr>
+	   [Lawh-i-Kullu't-Ta'ám] <i>God Passes By</i>, <a href="../../../SE/GPB/p001-086FirstPeriod.html#para78">p. 49</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para62">p. 116</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para70">p. 121</a>
 	   </small></td>
 </tr>
 <tr>
@@ -94,7 +96,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p57">57</a></center><p>
 	   <hr>
-	   3. Shoghi Effendi, <i>God Passes By</i>, p. 118.
+	   3. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para65">p. 118</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -155,7 +157,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p61">61</a></center><p>
 	   <hr>
-	   7. Shoghi Effendi, <i>God Passes By</i>, p. 120, for the words quoted in this sentence.<p>
+	   7. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para69">p. 120</a>, for the words quoted in this sentence.<p>
 	   8. Bahá'u'lláh, <i>Kitáb-i-Íqán</i>, p. 160 (Brit.), pp. <a href="../../../Baha/KI/p095-258.html#para177">250</a>-51 (U.S.).
 	   </small></td>
 </tr>
@@ -266,8 +268,8 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p69">69</a></center><p>
 	   <hr>
-	   15. Shoghi Effendi, <i>God Passes By</i>, p. 133.<p>
-	   16. <i>ibid.</i>, p. 138.
+	   15. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para96">p. 133</a>.<p>
+	   16. <i>ibid.</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para107">p. 138</a>.
 	   </small></td>
 </tr>
 <tr>
