--- a/Baha'i/Others/ROB/V1/p071-083Ch06.html
+++ b/Baha'i/Others/ROB/V1/p071-083Ch06.html
@@ -17,7 +17,7 @@
        <td>
 	   	   <FORM ACTION="p053-070Ch05.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -25,12 +25,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p084-095Ch07.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -48,7 +48,7 @@
        <td>
 	   </td>
        <td VALIGN=top><small><center><a name="p71">71</a></center><p></small>
-	   <hr><small><a href="../../../Baha/HiddenWords.html">The Hidden Words</a></small>
+	   <hr><small><a href="../../../Baha/HiddenWords.html"><i>The Hidden Words</i></a></small>
 	   </td>
 </tr>
 <tr>
@@ -165,7 +165,7 @@
 	   		  </center>
 	   </small>
 	   </td>
-
+	   
        <td valign="top">
 	   <H1 ALIGN=center><a name="facingp79"></a>
 	   	   <img src="i/79.jpg" width="300" height="425" border="0" align="middle" ALT="MULLÁ ZAYNU'L-'ÁBIDÍN">
@@ -220,7 +220,7 @@
        <td VALIGN=top><small><center><a name="p81">81</a></center><p>
 	   * The gathering of the holy souls in the next world.<p>
 	   <hr>
-	   9. Shoghi Effendi, <i>God Passes By</i>, p. 238, for the words quoted in this sentence.<p>
+	   9. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p235-320ThirdPeriod.html#para7">p. 238</a>, for the words quoted in this sentence.<p>
 	   10. Bahá'u'lláh, <i>The Hidden Words</i>, no. <a href="../../../Baha/HiddenWords.html#persian71">71</a>, Persian version.<br>
 	   <hr>
 	   [Párán...] <i>The Kitáb-i-Íqán</i> p. <a href="../../../Baha/KI/p001-094.html#para13">11</a>, <a href="../../../Baha/KI/p259-270GlossaryAndNotes.html#Párán">266</a>
@@ -267,7 +267,7 @@
        <td>
 	   	   <FORM ACTION="p053-070Ch05.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -275,12 +275,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p084-095Ch07.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
