--- a/Baha'i/Others/ROB/V1/p096-104Ch08.html
+++ b/Baha'i/Others/ROB/V1/p096-104Ch08.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p084-095Ch07.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p105-152Ch09.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -151,7 +151,7 @@
        <td VALIGN=top><small><center><a name="p103">103</a></center><p>
 	   * Dhabíh should not be confused with the brothers Mírzá Muhammad-Hasan and Mírzá Muhammad-Husayn, who were designated by Bahá'u'lláh the 'King of the Martyrs' and the 'Beloved of the Martyrs', respectively. Dhabíh took his own life because he was intoxicated by the wine of the presence of Bahá'u'lláh, Who had enabled him to witness the glory of the spiritual worlds of God. This cannot be compared with ordinary suicide, nor can this episode be taken to mean that Bahá'í belief condones the taking of one's own life. On the contrary, suicide is strongly condemned in the Faith of Bahá'u'lláh and is clearly against His Teachings.
 	   <hr>
-	   13. Shoghi Effendi, <i>God Passes By</i>, pp. 136-7.
+	   13. Shoghi Effendi, <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para104">136</a>-7.
 	   </small></td>
 </tr>
 <tr>
@@ -177,7 +177,7 @@
        <td>
 	   	   <FORM ACTION="p084-095Ch07.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -185,12 +185,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p105-152Ch09.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
