--- a/Baha'i/Others/ROB/V1/p105-152Ch09.html
+++ b/Baha'i/Others/ROB/V1/p105-152Ch09.html
@@ -1,6 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <!-- Covenant Library: \cl\Baha'i\Others\ROB\V1\p105-152Ch09.html -->
 
+<!-- Issues
+
+19. Shoghi Effendi, <i>God Passes By</i>, p. 142.  --quotation is on page 144
+
+-->
+
 <html>
 <head>
 	<title>The Revelation of Bahá'u'lláh, Volume 1, Chapter 9</title>
@@ -40,7 +46,11 @@
 	   A cursory review of the history of the Faith will demonstrate the irresistible power of the Cause of Bahá'u'lláh. From the time of its inception this Faith had been oppressed by the civil and ecclesiastical authorities in the land of its birth. Its youthful Herald, the Báb, Who ushered in the dawn of a New Day and gave the glad-tidings of the coming of 'Him Whom God shall make manifest' (Bahá'u'lláh), was publicly martyred. Its Founder, Bahá'u'lláh, was imprisoned and exiled to far-off lands. For almost half a century He and His family were subjected to inhuman cruelties and hardships. No less than twenty
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="p105">105</a></center><p></small></td>
+       <td VALIGN=top><small><center><a name="p105">105</a></center><p>
+	   <hr>
+	   <hr>
+	   [Sahífiy-i-Shattíyyih] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para112">p. 140</a>
+	   </small></td>
 </tr>
 <tr>
        <td>
@@ -96,7 +106,8 @@
 	   ‡ Literally, Paradise. It is also significant to note here that Bahá'u'lláh declared His Mission in 1863 in a garden outside Baghdád which was designated the 'Garden of Ridván'.<p>
 	   <hr>
 	   <hr>
-	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
+	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a><p>
+	   [Madínatu't-Tawhíd] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para112">p. 140</a>
 	   </small></td>
 </tr>
 <tr>
@@ -388,7 +399,11 @@
 	   He requested Bahá'u'lláh to interpret for him a certain verse of the <i>Qur'án</i> and to explain the significance and the inner
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="p125">125</a></center><p></small></td>
+       <td VALIGN=top><small><center><a name="p125">125</a></center><p>
+	   <hr>
+	   <hr>
+	   [Lawh-i-Áyiy-i-Núr] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para112">p. 140</a>
+	   </small></td>
 </tr>
 <tr>
        <td>
@@ -495,7 +510,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p133">133</a></center><p>
 	   <hr>
-	   12. Shoghi Effendi, <i>God Passes By</i>, pp. 248-9, for the words quoted.
+	   12. Shoghi Effendi, <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p235-320ThirdPeriod.html#para27">248</a>-9, for the words quoted.
 	   </small></td>
 </tr>
 <tr>
@@ -683,7 +698,7 @@
        <td VALIGN=top><small><center><a name="p144">144</a></center><p>
 	   * See p. <a href="p084-095Ch07.html#p91">91</a>.<p>
 	   <hr>
-	   17. Shoghi Effendi, <i>God Passes By</i>, p. 142.
+	   17. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para114">p. 142</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -698,7 +713,7 @@
 	   * When Hájí Mullá Hasan arrived in Bahá'u'lláh's reception room, to his amazement he found the celebrated mujtahid, Mullá Muhammad-I-Qá'iní surnamed Nabíl-i-Akbar (one of the Apostles of Bahá'u'lláh) seated there with reverence and humility. Quietly he asked Nabíl-i-Akbar, 'What are you doing here, sir?' The reply came, 'I am here for the same reason that you are.' (See pp. <a href="p084-095Ch07.html#p91">91</a>-5.)<p>
 	   † Divines and learned men of Islám.<p>
 	   <hr>
-	   18. Shoghi Effendi, <i>God Passes By</i>, p. 144.
+	   18. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para116">p. 144</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -712,8 +727,8 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p146">146</a></center><p>
 	   <hr>
-	   19. Shoghi Effendi, <i>God Passes By</i>, p. 142.<p>
-	   20. <i>ibid.</i>, p. 141, for the words quoted in this paragraph.
+	   19. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para116">p. 144</a>.<p>
+	   20. <i>ibid.</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para113">p. 141</a>, for the words quoted in this paragraph.
 	   </small></td>
 </tr>
 <tr>
@@ -784,7 +799,7 @@
 <tr>
        <td>
 	   openly showed opposition to Him and became a follower of Mírzá Yahyá.<p>
-	   <i>Javáhiru'l-Asrár</i><p>
+	   <i><b>Javáhiru'l-Asrá</b>r</i><p>
 	   The <i>Javáhiru'l-Asrár</i> (The Essence of Mysteries) was revealed in Arabic by Bahá'u'lláh in Baghdád in honour of Siyyid Yúsuf-i-Sidihí, a resident of Karbilá, who had compiled some questions concerning the coming of the Promised One of Islám, claiming that anyone who could answer them would be the possessor of Truth. As soon as his questions reached Bahá'u'lláh, He revealed this Tablet and despatched it to Siyyid Yúsuf the same day.<p>
 	   The <i>Javáhiru'l-Asrár</i> must have been revealed while Bahá'u'lláh's enemies were actively plotting against His life. For in it He speaks briefly of the sufferings which were inflicted upon Him and mentions the machinations of those who were intent upon banishing or assassinating Him. Another clue pointing to the period of its revelation is to be found in the <i>Kitáb-i-Íqán</i> There Bahá'u'lláh alludes to the Tablet of <i>Javáhiru'l-Asrár</i> when He says:<p>
 	   <blockquote>Similarly, in the three other Gospels, according to Luke, Mark, and John, the same statements are recorded. As We have referred at length to these in Our Tablets revealed in the Arabic tongue, We have made no mention of them in these pages, and have confined Ourselves to but one reference.<small><sup>27</sup></small><p></blockquote>
@@ -796,6 +811,7 @@
 	   <hr>
 	   27. Bahá'u'lláh, <i>Kitáb-i-Íqán</i>, p. 17 {Brit.), pp. <a href="../../../Baha/KI/p001-094.html#para25">25</a>-6 (U.S.).<p>
 	   <hr>
+	   [Javáhiru'l-Asrár] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para112">p. 140</a><p>
 	   <a href="../../../Baha/TSVATFV.html#p1"><i>The Seven Valleys of Bahá'u'lláh</i></a>
 	   </small></td>
 </tr>
