--- a/Baha'i/Others/ROB/V1/p153-197Ch10.html
+++ b/Baha'i/Others/ROB/V1/p153-197Ch10.html
@@ -149,7 +149,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p160">160</a></center><p>
 	   <hr>
-	   5. Shoghi Effendi, <i>God Passes By</i>, pp. 138-9.
+	   5. Shoghi Effendi, <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para108">138</a>-9.
 	   </small></td>
 </tr>
 <tr>
