--- a/Baha'i/Others/ROB/V1/p198-209Ch11.html
+++ b/Baha'i/Others/ROB/V1/p198-209Ch11.html
@@ -214,8 +214,8 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p209">209</a></center><p>
 	   <hr>
-	   4. Shoghi Effendi, <i>God Passes By</i>, p. 135.<p>
-	   5. <i>ibid.</i>, p. 137, for the passage quoted.
+	   4. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para101">p. 135</a>.<p>
+	   5. <i>ibid.</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para105">p. 137</a>, for the passage quoted.
 	   </small></td>
 </tr>
 </table>
