--- a/Baha'i/Others/ROB/V1/p210-220Ch12.html
+++ b/Baha'i/Others/ROB/V1/p210-220Ch12.html
@@ -64,7 +64,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p212">212</a></center><p>
 	   <hr>
-	   1. Shoghi Effendi, <i>God Passes By</i>, p. 360, for the passage quoted.<p>
+	   1. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p321-401FourthPeriod.html#para70">p. 360</a>, for the passage quoted.<p>
 	   <hr>
 	   [sacred houses] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para32">&para;32</a><p>
 	   [Súriy-i-Hajj] <i>The Revelation of Bahá'u'lláh</i>, vol. 2 p. <a href="../V2/p236-269Ch11.html#p240">240</a>
