--- a/Baha'i/Others/ROB/V1/p257-282Ch16.html
+++ b/Baha'i/Others/ROB/V1/p257-282Ch16.html
@@ -105,7 +105,7 @@
        <td VALIGN=top><small><center><a name="p261">261</a></center><p>
 	   * Muezzin: the one who calls to prayer.<p>
 	   <hr>
-	   2. Shoghi Effendi, <i>God Passes By</i>, p. 149, for the lines quoted.
+	   2. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para127">p. 149</a>, for the lines quoted.
 	   </small></td>
 </tr>
 <tr>
@@ -120,7 +120,7 @@
        <td VALIGN=top><small><center><a name="p262">262</a></center><p>
 	   * See p. <a href="p257-282Ch16.html#p260">260</a>, n. 1.<p>
 	   <hr>
-	   3. Shoghi Effendi, <i>God Passes By</i>, p. 154, for the words quoted.
+	   3. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para137">p. 154</a>, for the words quoted.
 	   </small></td>
 </tr>
 <tr>
@@ -304,14 +304,14 @@
        <td VALIGN=top><small><center><a name="p276">276</a></center><p>
 	   * This talk was given on the ninth day of Ridván 1916, at Bahjí, 'Akká.<p>
 	   <hr>
-	   8. Shoghi Effendi, <i>God Passes By</i>, p. 153, for the passage quoted.
+	   8. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para136">p. 153</a>, for the passage quoted.
 	   </small></td>
 </tr>
 <tr>
        <td>
 	   joyous event in His life. The days of Ridván became the Most Great Festival, celebrating the Declaration of His Mission to His followers.<p>
 	   The Declaration of Bahá'u'lláh in the Garden of Ridván may be regarded as the climax of ten years of His Revelation and the consummation of the first phase of His ministry. On that day the Hand of Omnipotence removed a 'myriad veils of light' from His countenance, vouchsafing to men a glimpse of His power and glory, and opening before them a new chapter in their life on this planet. Bahá'u'lláh has stated that on that day 'the breezes of forgiveness were wafted over the entire creation', and 'all created things were immersed in the sea of purification'. <small><sup>9</sup></small><p>
-	   In the Tablet just quoted (pp. 274-5) Bahá'u'lláh extols the glories of the Festival of Ridván and describes its significance in these terms:<p>
+	   In the Tablet just quoted (pp. <a href="p257-282Ch16.html#p274">274</a>-5) Bahá'u'lláh extols the glories of the Festival of Ridván and describes its significance in these terms:<p>
 	   <blockquote>Verily, We have caused every soul to expire by virtue of Our irresistible and all-subduing sovereignty. We have, then, called into being a new creation, as a token of Our grace unto men. I am, verily, the All-Bountiful, the Ancient of Days.<small><sup>10</sup></small><p></blockquote>
 	   In one of His prayers revealed in Adrianople, Bahá'u'lláh refers to this new creation in these words:<p>
 	   <blockquote>
@@ -322,7 +322,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p277">277</a></center><p>
 	   <hr>
-	   9. Shoghi Effendi, <i>God Passes By</i>, p. 154, for the words quoted.<p>
+	   9. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para132">p. 154</a>, for the words quoted.<p>
 	   10. Bahá'u'lláh, <i>Gleanings from the Writings of Bahá'u'lláh</i>, section <a href="../../../Baha/GL/p003-346.html#para51">xiv</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../V2/p236-269Ch11.html#p252">p. 252</a></a>
 	   </small></td>
 </tr>
@@ -401,7 +401,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p282">282</a></center><p>
 	   <hr>
-	   14. Shoghi Effendi, <i>God Passes By</i>, p. 155.
+	   14. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para138">p. 155</a>.
 	   </small></td>
 </tr>
 </table>
