--- a/Baha'i/Others/ROB/V1/p294-314Ch18.html
+++ b/Baha'i/Others/ROB/V1/p294-314Ch18.html
@@ -42,7 +42,7 @@
        <td VALIGN=top><small><center><a name="p294">294</a></center><p>
 	   * The Báb, Whose name was Siyyid 'Alí-Muhammad, was born on the first day of Muharram 1235 A.H., and Bahá'u'lláh on the second day of the same month in 1233 A.H. These dates are in accordance with the lunar calendar used in the Islámic world. There is a tradition which attributes to Imám 'Alí, the successor of Muhammad, this saying: 'I am two years younger than my Lord'. (The comparable dates in the Christian calendar are, for the Báb, 20 October 1819, and for Bahá'u'lláh, 12 November 1817.)<p>
 	   <hr>
-	   1. Shoghi Effendi, <i>God Passes By</i>, p. 57, for the words quoted, except for the first title which comes from the 'Tablet of Ahmad'.<br>
+	   1. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p001-086FirstPeriod.html#para93">p. 57</a>, for the words quoted, except for the first title which comes from the 'Tablet of Ahmad'.<br>
 	   </small></td>
 </tr>
 <tr>
@@ -56,7 +56,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p295">295</a></center><p>
 	   <hr>
-	   2. Shoghi Effendi, <i>God Passes By</i>, p. 30, for the words quoted.<p>
+	   2. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p001-086FirstPeriod.html#para51">p. 30</a>, for the words quoted.<p>
 	   3. Shoghi Effendi, 'The Dispensation of Bahá'u'lláh', included in <i>The World Order of Bahá'u'lláh</i>, p. 101, for the passage quoted.
 	   </small></td>
 </tr>
@@ -73,7 +73,7 @@
        <td VALIGN=top><small><center><a name="p296">296</a></center><p>
 	   <hr>
 	   4. Shoghi Effendi, 'The Dispensation of Bahá'u'lláh', included in <i>The World Order of Bahá'u'lláh</i>, p. 100, for the passage quoted.<p>
-	   5. Shoghi Effendi, <i>God Passes By</i>, p. 29, for the words quoted.
+	   5. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p001-086FirstPeriod.html#para49">p. 29</a>, for the words quoted.
 	   </small></td>
 </tr>
 <tr>
@@ -88,7 +88,7 @@
        <td VALIGN=top><small><center><a name="p297">297</a></center><p>
 	   <hr>
 	   6. Shoghi Effendi, 'The Dispensation of Bahá'u'lláh', included in <i>The World Order of Bahá'u'lláh</i>, p. 101, for the passage quoted.<p>
-	   7. Shoghi Effendi, <i>God Passes By</i>, pp. 30-1, for the passage quoted.
+	   7. Shoghi Effendi, <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p001-086FirstPeriod.html#para52">30</a>-1, for the passage quoted.
 	   </small></td>
 </tr>
 <tr>
@@ -106,9 +106,9 @@
        <td VALIGN=top><small><center><a name="p298">298</a></center><p>
 	   * The Báb and the eighteen Letters of the Living.<p>
 	   <hr>
-	   8. Shoghi Effendi, <i>God Passes By</i>, p. 29, for the passage quoted.<p>
-	   9. <i>ibid.</i><p>
-	   10. <i>ibid.</i>
+	   8. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p001-086FirstPeriod.html#para49">p. 29</a>, for the passage quoted.<p>
+	   9. <a href="../../../SE/GPB/p001-086FirstPeriod.html#para49"><i>ibid.</i></a><p>
+	   10. <a href="../../../SE/GPB/p001-086FirstPeriod.html#para49"><i>ibid.</i></a><p>
 	   </small></td>
 </tr>
 <tr>
@@ -132,8 +132,8 @@
 	   ‡ Nineteen.<p>
 	   § 1280 A.H. (A.D. 1863).<p>
 	   <hr>
-	   11. Shoghi Effendi, <i>God Passes By</i>, for the five passages quoted.<p>
-	   12. <i>ibid.</i>, for the words quoted.
+	   11. Shoghi Effendi, <a href="../../../SE/GPB/p001-086FirstPeriod.html#para50"><i>God Passes By</i></a>, for the five passages quoted.<p>
+	   12. <a href="../../../SE/GPB/p001-086FirstPeriod.html#para50"><i>ibid.</i></a>, for the words quoted.
 	   </small></td>
 </tr>
 <tr>
@@ -146,7 +146,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p300">300</a></center><p>
 	   <hr>
-	   13. Shoghi Effendi, <i>God Passes By</i>, pp. 29-30, for the words quoted.<p>
+	   13. Shoghi Effendi, <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p001-086FirstPeriod.html#para50">29</a>-30, for the words quoted.<p>
 	   14. Shoghi Effendi, 'The Dispensation of Bahá'u'lláh', included in <i>The World Order of Bahá'u'lláh</i>, p. 100, for the words quoted.
 	   </small></td>
 </tr>
@@ -251,7 +251,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p308">308</a></center><p>
 	   <hr>
-	   18. Shoghi Effendi, <i>God Passes By</i>, pp. 93-9.<br>
+	   18. Shoghi Effendi, <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para13">93</a>-9.<br>
 	   <hr>
 	   ["to extinguish..."] <i>The Kitáb-i-Íqán</i> <a href="../../../Baha/KI/p001-094.html#para102">p. 92</a><p>
 	   ["all the Dispensations of the past..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#para495">CXV</a>, <a href="../../../Baha/GL/p003-346.html#para702">CLXI</a>.
@@ -327,7 +327,7 @@
 	   22. Shoghi Effendi, 'The Dispensation of Bahá'u'lláh', included in <i>The World Order of Bahá'u'lláh</i>, pp. 103-4.<p>
 	   23. Shoghi Effendi, <i>The Promised Day is Come</i>, p. 6.<p>
 	   24. Shoghi Effendi, 'The Dispensation of Bahá'u'lláh', included in <i>The World Order of Bahá'u'lláh</i>, p. 101.<p>
-	   25. Shoghi Effendi, <i>God Passes By</i>, p. 283.
+	   25. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p235-320ThirdPeriod.html#para98">p. 283</a>.
 	   </small></td>
 </tr>
 <tr>
