--- a/Baha'i/Others/ROB/V1/p315-319Apndx_I.html
+++ b/Baha'i/Others/ROB/V1/p315-319Apndx_I.html
@@ -42,7 +42,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p315">315</a></center><p>
-	   * The reader may consult <i>God Passes By</i>, pp. 244-51, by Shoghi Effendi, for information about this situation.
+	   * The reader may consult <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p235-320ThirdPeriod.html#p244">244</a>-51, by Shoghi Effendi, for information about this situation.
 	   </small></td>
 </tr>
 <tr>
