--- a/Baha'i/Others/ROB/V1/p337-340Biblio.html
+++ b/Baha'i/Others/ROB/V1/p337-340Biblio.html
@@ -84,7 +84,7 @@
 	   NABÍL-I-A'ZAM (Muhammad-i-Zarandí). <i>The Dawn-Breakers</i>. Nabíl's Narrative of the Early Days of the Bahá'í Revelation. Wilmette, Illinois: Bahá'í Publishing Trust, 1932. London: Bahá'í Publishing Trust, 1953.<p>
 	   SHOGHI EFFENDI. <i>The Advent of Divine Justice</i>. First published 1939. Wilmette, Illinois: Bahá'í Publishing Trust, rev. edn. 1963.<p>
 	   <blockquote>
-	   <i>God Passes By</i>. Wilmette, Illinois: Bahá'í Publishing Trust, 1944.<p>
+	   <a href="../../../SE/GPB/Cover.html"><i>God Passes By</i></a>. Wilmette, Illinois: Bahá'í Publishing Trust, 1944.<p>
 	   <i>The Promised Day Is Come</i>. First published 1941. Wilmette, Illinois: Bahá'í Publishing Trust, rev. edn. 1961.<p>
 	   <i>The World Order of Bahá'u'lláh</i>. First published 1938. Wilmette, Illinois: Bahá'í Publishing Trust, rev. edn. 1955.<p>
 	   </blockquote>
