--- a/Baha'i/Others/ROB/V1/p084-095Ch07.html
+++ b/Baha'i/Others/ROB/V1/p084-095Ch07.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p071-083Ch06.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p096-104Ch08.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -135,7 +135,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p92">92</a></center><p>
 	   <hr>
-	   3. Shoghi Effendi, <i>God Passes By</i>, p. 143, for the words quoted.<p>
+	   3. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para115">p. 143</a>, for the words quoted.<p>
 	   4. Mullá Muhammad-Sádiq-i-Khurásání is described by 'Abdu'l-Bahá in <i>Memorials of the Faithful</i>, pp. 5-8 and by Nabíl in <i>The Dawn-Breakers</i> (consult the index).<p>
 	   </small></td>
 </tr>
@@ -180,7 +180,7 @@
        <td>
 	   	   <FORM ACTION="p071-083Ch06.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -188,12 +188,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p096-104Ch08.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
