--- a/Baha'i/Others/ROB/V1/p228-245Ch14.html
+++ b/Baha'i/Others/ROB/V1/p228-245Ch14.html
@@ -45,6 +45,7 @@
 	   * An ancient festival when the Persians celebrate their New Year on the day of the vernal equinox, usually on the 21st March. The Bahá'í calendar also begins with Naw-Rúz which is one of the Bahá'í Holy Days. In 1863, Naw-Rúz was celebrated on the 22nd March as the vernal equinox took place after sunset on the 21st.
 	   <hr>
 	   <hr>
+	   [Tablet of the Holy Mariner] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para112">p. 140</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para122">p. 147</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para125">p. 148</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para140">p. 157</a><p>
 	   [Naw-Rúz] <i><a href="../../../Baha/KA/p258-296Index.html#Naw-Rúz">The Kitáb-i-Aqdas</a></i>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para225">p. 67</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="../V1/p351-363Index.html#Naw-Rúz">1</a>, <a href="../V2/p469-476Index.html#Naw-Rúz">2</a>, <a href="../V3/p467-483Index.html#Naw-Rúz">3</a>, <a href="../V4/p463-485Index.html#Naw-Rúz">4</a><p>
 	   </small></td>
 </tr>
@@ -59,7 +60,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p229">229</a></center><p>
 	   <hr>
-	   1. Shoghi Effendi, <i>God Passes By</i>, p. 147.
+	   1. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para123">p. 147</a>.
 	   <hr>
 	   <hr>
 	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
