--- a/Baha'i/Others/ROB/V1/p283-293Ch17.html
+++ b/Baha'i/Others/ROB/V1/p283-293Ch17.html
@@ -72,7 +72,7 @@
        <td VALIGN=top><small><center><a name="p285">285</a></center><p>
 	   * The titles of these officials and notables may be translated as follows: válís, governors; mutisarrifs, provincial governors; Qá'im-magáms, viceregents; mudírs, district prefects; shaykhs, elders or chiefs; muftís, expounders of Muslim law who rule on points of religious jurisprudence; qadís, judges.<p>
 	   <hr>
-	   1. Shoghi Effendi, <i>God Passes By</i>, p. 156.<br>
+	   1. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para139">p. 156</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -83,7 +83,11 @@
 	   During this period Jináb-i-Muníb rendered memorable services to the Faith in Persia, especially in Tihrán. After this, he journeyed to Adrianople, attained the presence of Bahá'u'lláh again, and was in that city when Bahá'u'lláh was exiled to 'Akká. About that time, however, he was taken ill and badly needed treatment. In spite of this, he begged Bahá'u'lláh to permit him to join in His exile as he longed to be with his Lord.<p>
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="p286">286</a></center><p></small></td>
+       <td VALIGN=top><small><center><a name="p286">286</a></center><p>
+	   <hr>
+	   <hr>
+	   [Súriy-i-Asháb], <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para172">p. 171</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 2, <a href="../V2/p065-106Ch04.html">p. 286</a>
+	   </small></td>
 </tr>
 <tr>
        <td>
@@ -185,7 +189,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p293">293</a></center><p>
 	   <hr>
-	   12. Shoghi Effendi, <i>God Passes By</i>, pp. 157-8.
+	   12. Shoghi Effendi, <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para141">157</a>-8.
 	   <hr>
 	   <hr>
 	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
